--- a/index.html
+++ b/index.html
@@ -10,50 +10,72 @@
     <!--nav-->
     <header class="header">
       <div class="header-container container">
-        <div class="header__nav">
-          <img class="site-logo" src="./images/logo.svg" alt="logo" />
-          <nav class="sitenav">
-            <ul class="sitenav__list">
-              <li class="sitenav__list-item">
-                <a href="#" class="sitenav__link">Features</a>
-                <ul class="hidden__list">
-                  <li class="hidden__list-item">
-                    <img src="./images/icon-todo.svg" alt="icon" /> Todo List
-                  </li>
-                  <li class="hidden__list-item">
-                    <img src="./images/icon-calendar.svg" alt="" /> Calendar
-                  </li>
-                  <li class="hidden__list-item">
-                    <img src="./images/icon-reminders.svg" alt="" /> Reminders
-                  </li>
-                  <li class="hidden__list-item">
-                    <img src="./images/icon-planning.svg" alt="" /> Planning
-                  </li>
-                </ul>
-              </li>
-              <li class="sitenav__list-item">
-                <a href="#" class="sitenav__link">Company</a>
-                <ul class="hidden__list second-hidden">
-                  <li class="hidden__list-item">History</li>
-                  <li class="hidden__list-item">Our Team</li>
-                  <li class="hidden__list-item">Blog</li>
-                </ul>
-              </li>
-              <li class="sitenav__list-item">
-                <a href="#" class="sitenav__link">Careers</a>
-              </li>
-              <li class="sitenav__list-item">
-                <a href="#" class="sitenav__link">About </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <div class="header__register">
-          <a href="#">Login</a>
-          <a class="register" href="#">Register</a>
-        </div>
+          <div class="header__nav">
+              <img class="site-logo" src="./images/logo.svg" alt="">
+              <nav class="sitenav">
+                  <ul class="sitenav__list">
+                      <li class="sitenav__list-item">
+                          <a href="#" class="sitenav__link">Features </a>
+                          <ul class="hidden__list">
+                              <li class="hidden__list-item">
+                                  <img src="./images/icon-todo.svg" alt="icon"> Todo List
+                                  <ul class="inner-list">
+                                      <li class="inner-list-item">something
+                                      </li>
+                                      <li class="inner-list-item">something
+                                      </li>
+                                      <li class="inner-list-item">something
+                                        <ul class="last-list">
+                                      </li>
+                                      </ul>
+                                  </ul>
+                              </li>
+                              <li class="hidden__list-item"> 
+                                  <img src="./images/icon-calendar.svg" alt="icon"> Calendar
+                                  <ul class="inner-list">
+                                      <li class="inner-list-item">something</li>
+                                      <li class="inner-list-item">something</li>
+                                      <li class="inner-list-item">something</li>
+                                  </ul>
+                              </li>
+                              <li class="hidden__list-item"> <img src="./images/icon-reminders.svg" alt="icon"> Reminders
+                                  <ul class="inner-list">
+                                      <li class="inner-list-item">something
+                                      </li>
+                                      <li class="inner-list-item">something</li>
+                                      <li class="inner-list-item">something</li>
+                                  </ul>
+                              </li>
+                              <li class="hidden__list-item"> <img src="./images/icon-planning.svg" alt="icon"> Planning
+                                  <ul class="inner-list">
+                                      <li class="inner-list-item">something
+                                      </li>
+                                      <li class="inner-list-item">something</li>
+                                      <li class="inner-list-item">something</li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      </li>
+                      <li class="sitenav__list-item">
+                          <a href="#" class="sitenav__link">Company</a>
+                          <ul class="hidden__list second-hidden">
+                              <li class="hidden__list-item">History</li>
+                              <li class="hidden__list-item"> Our Team</li>
+                              <li class="hidden__list-item">Blog</li>
+                          </ul>
+                      </li>
+                      <li class="sitenav__list-item"><a href="#" class="sitenav__link">Careers </a></li>
+                      <li class="sitenav__list-item"><a href="#" class="sitenav__link">About 
+                      </a></li>
+                  </ul>
+              </nav>
+          </div>
+          <div class="header__register">
+              <a href="#">Login</a>
+              <a class="register" href="#">Register</a>
+          </div>
       </div>
-    </header>
+  </header>
     <!--main-->
     <main class="main">
       <div class="main-container container">
